# ipecac

./: Makefile.am  Makefile.in  Makefile.in.orig  README  cleanup  config.h.in  configure  configure.ac
autom4te.cache/: output.0  traces.0
benchmark/: Makefile.am  Makefile.in  bench_arithmetic.c  bench_ipecac.h  bench_main.c
include/: arithmetic.h  bitwise.h  convert.h  function.h  ipecac.h  misc.h  util.h
src/: Makefile.am  Makefile.in  arithmetic.c  bitwise.c  convert.c  function.c  internal.c  internal.h  misc.c  util.c
test/: Makefile.am  Makefile.in  check_arithmetic.c  check_bitwise.c  check_convert.c  check_function.c  check_ipecac.h  check_main.c
